<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ad340app.signUp2Activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Huang, JiaJun 5/05/2021" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Name(JK)"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="abc@gmail.com"
            android:inputType="textEmailAddress"
            app:errorEnabled="true" />

        <EditText
            android:id="@+id/jobInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Job"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/userNameInput"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="15"
            android:hint="JK1000"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="date of birth" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/descripInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="100"
            android:hint="description"
            android:inputType="textLongMessage" />

        <Button
            android:id="@+id/submitBut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToProfile"
            android:text="@string/but" />

    </LinearLayout>


</RelativeLayout>
</ScrollView>